--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -12,13 +12,9 @@ on:
       - main
       - develop
 jobs:
-  Run_workspace_Tests:
+  Run_Unit_Tests:
     runs-on: macOS-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: List available Xcode versions
-      run: ls /Applications | grep Xcode
-    - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_12.2.app && /usr/bin/xcodebuild -version
-    - name: Run unit tests
-      run: xcodebuild test -scheme YourProject -workspace YourProject.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 11,OS=14.2' | xcpretty && exit ${PIPESTATUS[0]}
+    - uses: actions/checkout@v2
+    - name: Test
+      run: swift test -v
