--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -11,7 +11,5 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build for macOS
+    - name: Build
       run: swift build -v
-    - name: Build for iOS
-      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild build-for-testing -scheme IndexedDataStore -destination "platform=iOS Simulator,OS=latest,name=iPhone 12" | xcpretty
