--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Generate xcodeproj
       run: swift package generate-xcodeproj
     - name: Build iOS
-      run: xcodebuild build -destination 'platform=iOS Simulator, name=iPhone 11' -scheme 'sRouting-Package'
+      run: xcodebuild build -sdk 'iphonesimulator'  -scheme 'sRouting-Package'
     - name: Build tvOS
-      run: xcodebuild build -destination 'platform=tvOS Simulator, name=Apple TV' -scheme 'sRouting-Package'
+      run: xcodebuild build -sdk 'appletvsimulator'  -scheme 'sRouting-Package'
