--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -19,6 +19,6 @@ jobs:
     - name: Generate xcodeproj
       run: swift package generate-xcodeproj
     - name: Run iOS tests
-      run: xcodebuild test -destination 'name=iPhone 11' -scheme 'sRouting-Package' -enableCodeCoverage YES build test
+      run: xcodebuild test -destination 'name=iPhone 14' -scheme 'sRouting' -enableCodeCoverage YES build test
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.2.1
