--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Run macOS tests
       run: xcodebuild test -scheme 'sRouting' -destination 'platform=macOS'
     - name: Run tvOS tests
-      run: xcodebuild test -scheme 'sRouting' -destination 'platform=tvOS Simulator'
+      run: xcodebuild test -scheme 'sRouting' -destination 'platform=tvOS Simulator, id=5C40B5BC-1162-4FD8-BC6A-24F8E350B288, OS=16.0, name=Apple TV'
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.2.1
