--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -10,12 +10,10 @@ jobs:
   Building_The_Package:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Build macOS
       run: swift build -v
     - name: Generate xcodeproj
       run: swift package generate-xcodeproj
     - name: Build iOS
-      run: xcodebuild build -sdk 'iphonesimulator'  -scheme 'sRouting-Package'
-    - name: Build tvOS
-      run: xcodebuild build -sdk 'appletvsimulator'  -scheme 'sRouting-Package'
+      run: xcodebuild build -sdk 'iphonesimulator'  -scheme 'sRouting'
