--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run iOS tests
-      run: xcodebuild test -destination 'name=iPhone 14' -scheme 'sRouting' -enableCodeCoverage YES build test
+      run: xcodebuild test -destination 'platform=iOS Simulator' -scheme 'sRouting' -enableCodeCoverage YES build test
     - name: Run macOS tests
       run: xcodebuild test -scheme 'sRouting' -destination 'platform=macOS'
     - name: Run tvOS tests
