[UnitTest] - Adding CodeCov token

--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -22,3 +22,5 @@ jobs:
       run: xcodebuild test -scheme 'sRouting' -destination 'platform=macOS'
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
