[UnitTest] - Testing Macros

--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Run iOS tests
       run: xcodebuild test -destination 'platform=iOS Simulator' -scheme 'sRouting' -enableCodeCoverage YES build test
     - name: Run macOS tests
-      run: xcodebuild test -scheme 'sRouting' -destination 'platform=macOS'
+      run: xcodebuild test -scheme 'sRouting' -destination 'platform=macOS' -enableCodeCoverage YES build test
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
