--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Build macOS
       run: swift build -v
     - name: Build iOS
-      run: xcodebuild build -scheme 'sRouting' -destination 'platform=iOS Simulator'
+      run: xcodebuild build -scheme 'sRouting' -destination 'platform=iOS Simulator,OS=18.0,name=iPhone 16'
