Show list available Xcode versions for Actions

--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+    - name: List available Xcode versions
+      run: ls /Applications | grep Xcode
+    - name: Show current version of Xcode
+      run: xcodebuild -version
     - name: Build macOS
       run: swift build -v
     - name: Build iOS
