--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: List available Xcode versions
       run: ls /Applications | grep Xcode
+    - name: Select Xcode version
+      run: sudo xcode-select -s '/Applications/Xcode_16.1.app/Contents/Developer'
     - name: Show current version of Xcode
       run: xcodebuild -version
     - name: Build macOS
