--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -14,6 +14,10 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Select Xcode version
+      run: sudo xcode-select -s '/Applications/Xcode_16.1.app/Contents/Developer'
+    - name: Show current version of Xcode
+      run: xcodebuild -version
     - name: Run macOS tests
       run: swift test --enable-code-coverage
     - name: Upload coverage to Codecov
