--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -20,6 +20,8 @@ jobs:
       run: xcodebuild -version
     - name: Run macOS tests
       run: swift test --enable-code-coverage
+    - name: Run iOS tests
+      run: xcodebuild test -destination 'platform=iOS Simulator,OS=18.0,name=iPhone 16' -scheme 'sRouting' -enableCodeCoverage YES build test
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
