Generic SRRouter instead of generate code for a router.

--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -4,11 +4,9 @@ name: Unit Testing
 on:
 
   push:
-    branches:
-      - develop
+    branches: [ develop, main ]
   pull_request:
-    branches:
-      - main
+    branches: [ develop ]
 jobs:
   Run_Unit_Tests:
     runs-on: macOS-latest
