--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -2,9 +2,9 @@ name: Building
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, main ]
   pull_request:
-    branches: [ main ]
+    branches: [ develop ]
 
 jobs:
   Building_The_Package:
