--- a/Example/Bookie/Bookie/Info.plist
+++ b/Example/Bookie/Bookie/Info.plist
@@ -2,12 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>ABeeZee-Regular.ttf</string>
 		<string>ABeeZee-Italic.ttf</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict/>
 </dict>
 </plist>
