--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -20,6 +20,8 @@ jobs:
       run: swift test --enable-code-coverage
     - name: Run iOS tests
       run: xcodebuild test -destination 'platform=iOS Simulator,OS=18.1,name=iPhone 16' -scheme 'sRouting-Package' -enableCodeCoverage YES
+    - name: Run iPadOS tests
+      run: xcodebuild test -destination 'platform=iOS Simulator,OS=18.1,name=iPad Pro 11-inch (M4)' -scheme 'sRouting-Package' -enableCodeCoverage YES
     - name: Prepare Code Coverage
       run: xcrun llvm-cov export -format="lcov" .build/debug/sRoutingPackageTests.xctest/Contents/MacOS/sRoutingPackageTests  -instr-profile .build/debug/codecov/default.profdata > info.lcov
     - name: Upload coverage to Codecov
