--- a/.github/workflows/Building.yml
+++ b/.github/workflows/Building.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build macOS
       run: swift build -v
     - name: Build iOS
-      run: xcodebuild build -scheme 'sRouting' -destination 'platform:iOS Simulator, id:dvtdevice-DVTiOSDeviceSimulatorPlaceholder-iphonesimulator:placeholder, name:Any iOS Simulator Device'
+      run: xcodebuild build -scheme 'sRouting' -destination 'generic/platform=iOS Simulator'
